syntax = "proto3";

package lattice.storage;

// Hybrid Logical Clock - used throughout
message HLC {
  uint64 wall_time = 1;  // Unix timestamp (ms)
  uint32 counter = 2;    // Logical counter for same-ms ordering
}

// 1. The Wrapper (What flies over the wire and gets stored)
message SignedEntry {
  bytes entry_bytes = 1;  // Serialized Entry message (kept as bytes for stable signature verification)
  bytes signature = 2;    // Ed25519 Signature of entry_bytes
  bytes author_id = 3;    // Public Key of the author (32 bytes)
}

// 2. The Log Entry (The Atomic Unit)
message Entry {
  uint32 version = 1;             // Format version for future evolution
  bytes store_id = 6;             // Store this entry belongs to (16-byte UUID)
  bytes prev_hash = 2;            // Link to previous sigchain entry (32 bytes)
  uint64 seq = 3;                 // Monotonic sequence number
  HLC timestamp = 4;              // Hybrid Logical Clock
  repeated bytes parent_hashes = 7;  // DAG ancestry: hashes of entries this supersedes
  bytes payload = 5;              // Opaque payload (Store implementation determines format)
}

// 4. Multi-head DAG storage (state.db)
message HeadInfo {
  bytes value = 1;       // The value at this head
  HLC hlc = 2;           // HLC for ordering
  bytes author = 3;      // Author's public key (32 bytes)
  bytes hash = 4;        // Hash of the SignedEntry that created this head
  bool tombstone = 5;    // True if this head represents a delete
}

message HeadList {
  repeated HeadInfo heads = 1;
}

// 5. Per-author state (DB and wire)
message ChainTip {
  uint64 seq = 1;   // Highest sequence number from this author
  bytes hash = 2;   // Hash of last entry (tip of sigchain)
  HLC hlc = 4;      // Highest HLC seen from this author
}

// 6. Log file record
message LogRecord {
  bytes hash = 1;         // BLAKE3 hash of entry_bytes (32 bytes)
  bytes entry_bytes = 2;  // Serialized SignedEntry
}

// 7. Orphan buffer storage
message OrphanedEntry {
  uint64 seq = 1;            // Sequence number of the orphaned entry
  SignedEntry entry = 2;     // The orphaned entry itself
  uint64 received_at = 3;    // Unix timestamp (seconds) when orphan was received
}

// 8. Stored peer sync info (state.db)
message PeerSyncInfo {
  SyncState sync_state = 1;  // Peer's last known sync state
  uint64 updated_at = 2;     // Unix timestamp (seconds) when received
}

// 9. Sync state (shared between storage and network)
message SyncState {
  repeated SyncAuthor authors = 1;  // Per-author sync state
  HLC sender_hlc = 2;               // Sender's current clock
  HLC common_hlc = 3;               // Min of max HLCs across all authors
}

message SyncAuthor {
  bytes author_id = 1;    // Ed25519 public key (32 bytes)
  ChainTip state = 2;  // The author's sync state
}
